--- a/03 - Avançando no HTML e CSS/05 - Avançando no CSS/index.html
+++ b/03 - Avançando no HTML e CSS/05 - Avançando no CSS/index.html
@@ -13,6 +13,7 @@
         <main>
             <div class="container">main</div>
         </main>
+        <main></main>
         <footer class="container">footer</footer>
     </div>
 </body>
