--- a/03 - Avançando no HTML e CSS/05 - Avançando no CSS/Projeto 01/index.html
+++ b/03 - Avançando no HTML e CSS/05 - Avançando no CSS/Projeto 01/index.html
@@ -50,7 +50,7 @@
                         </figcaption>
                     </figure>
 
-                    <figure class="item">
+                    <figure class="item" style="--delay:.6s">
 
                         <img src="https://picsum.photos/800/600?b=1" alt="">
 
@@ -62,7 +62,7 @@
                         </figcaption>
                     </figure>
 
-                    <figure class="item">
+                    <figure class="item" style="--delay:.8s">
 
                         <img src="https://picsum.photos/800/600?c=1" alt="">
 
@@ -74,7 +74,7 @@
                         </figcaption>
                     </figure>
 
-                    <figure class="item">
+                    <figure class="item" style="--delay:.1s">
 
                         <img src="https://picsum.photos/800/600?d=1" alt="">
 
@@ -86,7 +86,7 @@
                         </figcaption>
                     </figure>
 
-                    <figure class="item">
+                    <figure class="item" style="--delay:1.2s">
 
                         <img src="https://picsum.photos/800/600?e=1" alt="">
 
@@ -98,7 +98,7 @@
                         </figcaption>
                     </figure>
 
-                    <figure class="item">
+                    <figure class="item" style="--delay:1.4s">
 
                         <img src="https://picsum.photos/800/600?f=1" alt="">
 
@@ -110,7 +110,7 @@
                         </figcaption>
                     </figure>
 
-                    <figure class="item">
+                    <figure class="item" style="--delay:1.6s">
 
                         <img src="https://picsum.photos/800/600?g=1" alt="">
 
@@ -122,7 +122,7 @@
                         </figcaption>
                     </figure>
 
-                    <figure class="item">
+                    <figure class="item" style="--delay:1.8s">
 
                         <img src="https://picsum.photos/800/600?h=1" alt="">
 
@@ -134,7 +134,7 @@
                         </figcaption>
                     </figure>
 
-                    <figure class="item">
+                    <figure class="item" style="--delay:2s">
 
                         <img src="https://picsum.photos/800/600?i=1" alt="">
 
