--- a/03 - Avançando no HTML e CSS/05 - Avançando no CSS/Projeto 02/index.html
+++ b/03 - Avançando no HTML e CSS/05 - Avançando no CSS/Projeto 02/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="logo.svg" alt="Logo pata">
+            <img src="assets/logo.svg" alt="Logo pata">
             <form action="">
                 <label for="search">Pesquise por artigos</label>
                 <input id="search" type="text" placeholder="Pesquise por artigos">
@@ -22,15 +22,15 @@
         </header>
         <main>
             <div class="container1">
-                <img class="cat" src="cat.jpg" alt="Gato">
+                <img class="cat" src="assets/cat.jpg" alt="Gato">
                 <div class="full">
                     <h1>Seriam os gatos astronautas?</h1>
                     <div class="goodNo">
                         <button>
-                            <img src="ButtonGood.svg" alt="">
+                            <img src="assets/ButtonGood.svg" alt="">
                         </button>
                         <button>
-                            <img src="ButtonNoGood.svg" alt="">
+                            <img src="assets/ButtonNoGood.svg" alt="">
                         </button>
                 </div>
                 </div>
@@ -45,7 +45,7 @@
 
                 <section>
                     <div class="wrapper">
-                        <img src="cat01.png" alt="gato na mesa">
+                        <img src="assets/cat01.png" alt="gato na mesa">
                         <div class="details">
                             <h3>Sábado preguiçoso</h3>
                             <p>Descubra atividades interessantes para fazer com seu pet durante os finais de semana.</p>
@@ -53,7 +53,7 @@
                     </div>
 
                     <div class="wrapper">
-                        <img src="cat02.png" alt="gato na mesa">
+                        <img src="assets/cat02.png" alt="gato na mesa">
                         <div class="details">
                             <h3>Balaio de gatos</h3>
                             <p>Como evitar confusões entre seus gatíneos e acostumá-los desde filhotes.</p>
@@ -61,7 +61,7 @@
                     </div>
 
                     <div class="wrapper">
-                        <img src="cat03.png" alt="gato na mesa">
+                        <img src="assets/cat03.png" alt="gato na mesa">
                         <div class="details">
                             <h3>Cartela de cores</h3>
                             <p>Seu gato é inverno intenso? Verão profundo? Descubra as cores que mais combinam.</p>
@@ -69,7 +69,7 @@
                     </div>
 
                     <div class="wrapper">
-                        <img src="cat04.png" alt="gato na mesa">
+                        <img src="assets/cat04.png" alt="gato na mesa">
                         <div class="details">
                             <h3>Os gatos sentem frio?</h3>
                             <p>Preparem-se para a frente fria que vem para o país da melhor maneira possível.</p>
@@ -77,7 +77,7 @@
                     </div>
 
                     <div class="wrapper">
-                        <img src="cat05.png" alt="gato na mesa">
+                        <img src="assets/cat05.png" alt="gato na mesa">
                         <div class="details">
                             <h3>Conheça o Moacir</h3>
                             <p>Moacir é o gatinho da semana do nosso blog. Venha conhecer sua história de superação.</p>
