--- a/05 - Intensivão/index.html
+++ b/05 - Intensivão/index.html
@@ -52,9 +52,9 @@
                 <h2>Entre em contato</h2>
                 <form>
                     <label for="name">Seu nome</label>
-                    <input type="text" id="name">
+                    <input type="text" id="name" class="names" placeholder="Seu nome">
                     <label for="gmail">Email</label>
-                    <input type="email" id="gmail">
+                    <input type="email" id="gmail" class="gmails" placeholder="Email">
                     <textarea name="" id="messenge">Digite sua mensagem aqui...</textarea>
                     <button>Enviar Mensagem</button>
                 </form>
