--- a/05 - Intensivão/html e css/index.html
+++ b/05 - Intensivão/html e css/index.html
@@ -14,13 +14,13 @@
 <body>
     <div class="container"> 
         <header>
-            <img src="Projeto - 01/assets/astro.jpg" alt="">
+            <img src="assets/astro.jpg" alt="">
             
             <div class="title">
                 <h1>Explore sem limites</h1>
                 <p>Porque o aprendizado é contínuo</p>
                 <button>
-                    <img src="Projeto - 01/assets/seta.svg" alt="">
+                    <img src="assets/seta.svg" alt="">
                 </button>
             </div>
         </header>
@@ -28,19 +28,19 @@
         <main>
             <div class="planets">
                 <div class="planet-wrapper">
-                    <img src="Projeto - 01/assets/planet01.png" alt="">
+                    <img src="assets/planet01.png" alt="">
                     <h2>Não pare nunca</h2>
                     <p>Se você deseja ter sucesso nos estudos, é fundamental que você adote uma mentalidade de "não pare nunca". Estudar de forma consistente e contínua é a chave para o progresso e a conquista de seus objetivos.</p>
                 </div>
 
                 <div class="planet-wrapper">
-                    <img src="Projeto - 01/assets/planet02.png" alt="">
+                    <img src="assets/planet02.png" alt="">
                     <h2>Só volta</h2>
                     <p>Se você parou ou perdeu o ritmo em alguma atividade ou projeto, saiba que nunca é tarde para recomeçar. Às vezes, as circunstâncias podem mudar, ou podemos nos sentir desmotivados ou sobrecarregados.</p>
                 </div>
 
                 <div class="planet-wrapper">
-                    <img src="Projeto - 01/assets/planet03.png" alt="">
+                    <img src="assets/planet03.png" alt="">
                     <h2>Siga seu ritmo</h2>
                     <p>Avançar pouco a pouco mantém progresso constante em objetivos, evitando parar ou desistir. Mesmo pequenos passos nos aproximam do destino e motivam a continuidade. Não subestime o poder de cada ação rumo ao objetivo final.</p>
                 </div>
