--- a/06 - Avançando no Javascript/04 - Focus Timer 2.0/index.html
+++ b/06 - Avançando no Javascript/04 - Focus Timer 2.0/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="running">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,11 +44,11 @@
                         <span class="sr-only">Reiniciar contador</span>
                     </button>
 
-                    <button data-action="addTime" class="ph ph-plus-circle">
+                    <button data-action="addTime" class="ph ph-plus-circle timer">
                         <span class="sr-only">Adicionar cinco minutos</span>
                     </button>
 
-                    <button data-action="removeTime" class="ph ph-minus-circle">
+                    <button data-action="removeTime" class="ph ph-minus-circle timer">
                         <span class="sr-only">Remover cinco minutos</span>
                     </button>
                 </div>
