--- a/Prática/FocusTimer 2.0/index.html
+++ b/Prática/FocusTimer 2.0/index.html
@@ -67,7 +67,7 @@
                    
                 </button>
 
-                <button data-music="fire" id="fire" class="secondary fire">
+                <button data-music="fire" id="fire" class="secondary">
                     
                 </button>
             </section>
