--- a/Prática/Teste spa/index.html
+++ b/Prática/Teste spa/index.html
@@ -11,11 +11,11 @@
 <body id="body">
     <main>
         <nav>
-            <a class="home" href="/home">Home</a>
-            <a class="contact" href="/contact">Contato</a>
-            <a class="about" href="/about">Sobre</a>
-            <a class="help" href="/help">Ajuda</a>
-            <a class="error404" href="/404">404</a>
+            <a class="home" href="#home">Home</a>
+            <a class="contact" href="#contact">Contato</a>
+            <a class="about" href="#about">Sobre</a>
+            <a class="help" href="#help">Ajuda</a>
+            <a class="error404" href="#404">404</a>
         </nav>
     </main>
 
