--- a/07 - Javascript antes do framework/01 - SPA/SPA Universe/index.html
+++ b/07 - Javascript antes do framework/01 - SPA/SPA Universe/index.html
@@ -11,12 +11,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <script type="module" src="js/index.js" defer></script>
 </head>
-<body class="body home">
+<body class="body">
     <nav>
         <img src="assets/logo.svg" alt="">
-        <a href="/" onclick="route()">Home</a>
-        <a href="/universe" onclick="route()">O Universo</a>
-        <a href="/explorer" onclick="route()">Exploração</a>
+        <a href="/">Home</a>
+        <a href="/universe">O Universo</a>
+        <a href="/explorer">Exploração</a>
     </nav>
     <div id="app"></div>
 
