--- a/Prática/Praticando/index.html
+++ b/Prática/Praticando/index.html
@@ -11,10 +11,10 @@
 <body>
     <header>
         <nav>
-            <a href="/" onclick="route()">Início</a>
-            <a href="/buy" onclick="route()">Comprar</a>
-            <a href="/imc" onclick="route()">Calcular IMC</a>
-            <a href="/contact" onclick="route()">Contato</a>
+            <a href="/">Início</a>
+            <a href="/buy">Comprar</a>
+            <a href="/imc">Calcular IMC</a>
+            <a href="/contact">Contato</a>
         </nav>
     </header>
 
