--- a/Prática/Praticando/pages/buy.html
+++ b/Prática/Praticando/pages/buy.html
@@ -1,1 +1,12 @@
-<h1>buy</h1>
+<div class="mainBuy">
+    <h1 class="buyTitle">Adicione os itens desejados:</h1>
+    <form action="">
+        <label class="sr-only" for="items">Inserir item:</label>
+        <input class="inputItem" type="text" placeholder="Inserir itens">
+        <button class="addItem">Adicionar</button>
+        
+        <ol class="my-list">
+            
+        </ol>
+    </form>
+</div>
