--- a/Prática/Praticando/pages/imc.html
+++ b/Prática/Praticando/pages/imc.html
@@ -1,1 +1,19 @@
-<h1>imc</h1>
+<div class="containerImc">
+    <h1 class="imcTitle">Calculo de IMC</h1>
+    <form action="" id="formImc">
+        <div class="input-wrapper">
+            <label class="sr-only" for="weight">Peso</label>
+            <input id="weight" type="text" placeholder="Peso">
+        </div>
+        <div class="input-wrapper">
+            <label class="sr-only" for="height">Altura</label>
+            <input id="height" type="text" placeholder="Altura (cm)">
+        </div>
+
+        <button class="calcImc">Calcular</button>
+    </form>
+
+    <div class="modal hide">
+        
+    </div>
+</div>
