--- a/Prática/Praticando/pages/buy.html
+++ b/Prática/Praticando/pages/buy.html
@@ -2,7 +2,7 @@
     <h1 class="buyTitle">Adicione os itens desejados:</h1>
     <form action="">
         <label class="sr-only" for="items">Inserir item:</label>
-        <input class="inputItem" type="text" placeholder="Inserir itens">
+        <input id="items" class="inputItem" type="text" placeholder="Inserir itens">
         <button class="addItem">Adicionar</button>
         
         <ol class="my-list">
