--- a/Prática/Praticando/pages/contact.html
+++ b/Prática/Praticando/pages/contact.html
@@ -1,1 +1,6 @@
-<h1>contato</h1>
+<div class="contactNav">
+    <h1>Entre em contato:</h1>
+    <p><i class="ph ph-instagram-logo"></i>_arthurarthur</p>
+    <p><i class="ph ph-whatsapp-logo"></i>+353 83 3714345</p>
+    <p><i class="ph ph-at"></i>arthur.rodrigues1784@gmail.com</p>
+</div>
