--- a/Prática/Praticando/pages/home.html
+++ b/Prática/Praticando/pages/home.html
@@ -1,1 +1,4 @@
-<h1>home</h1>
+<main class="homeIn">
+    <p>SPA criada apenas para praticar conhecimentos em JavaScript. Site sem finalidade para de uso de CSS, toda sua estilização foi feita de modo simples, apenas para dar seguimento a prática.</p>
+    <p>Nesete projeto foi criado um marcador de tempo para cada pessoa saber quanto tempo passou navegando na página. Ao atualizar a página o cronômetro é zerado. Foi criado uma lógica na guia "Comprar", onde a pessoa escreve um produto no input de adiciona a lista pelo botão. Foi craiada uma lógica na guia "Calcular IMC", onde a pessoa preenche seu pesoa e sua altura nos campos de imput, e calcula o IMC clicando no botão de calcular, podendo ser resetado para calcular novamente.</p>
+</main>
