--- a/Prática/Praticando/pages/imc.html
+++ b/Prática/Praticando/pages/imc.html
@@ -10,9 +10,11 @@
             <input id="height" type="text" placeholder="Altura (cm)">
         </div>
 
-        <button class="calcImc">Calcular</button>
+        <div class="calcReset">
+            <button class="calcImc">Calcular</button>
+            <button id="reset" class="calcImc">Reset</button>
+        </div>
     </form>
-
     <div class="modal hide">
         
     </div>
