--- a/Prática/Praticando/index.html
+++ b/Prática/Praticando/index.html
@@ -6,6 +6,8 @@
     <title>Praticando</title>
 
     <link rel="stylesheet" href="style.css">
+
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <script type="module" src="script.js" defer></script>
 </head>
 <body>
@@ -23,7 +25,7 @@
     <div id="app"></div>
 
     <footer>
-        <div id="timer">
+        <div id="timer" title="Tempo de navegação">
             <span class="minutes">0</span>
             <span>:</span>
             <span class="seconds">0</span>
