--- a/Prática/Praticando/pages/buy.html
+++ b/Prática/Praticando/pages/buy.html
@@ -1,4 +1,4 @@
-<div class="mainBuy">
+<div class="container">
     <h1 class="buyTitle">Adicione os itens desejados:</h1>
     <form action="">
         <label class="sr-only" for="items">Inserir item:</label>
