--- a/Prática/Praticando/index.html
+++ b/Prática/Praticando/index.html
@@ -16,6 +16,7 @@
             <a href="/">Início</a>
             <a href="/buy">Comprar</a>
             <a href="/imc">Calcular IMC</a>
+            <a href="/media">Calcular média</a>
             <a href="/contact">Contato</a>
         </nav>
     </header>
@@ -31,7 +32,7 @@
             <span class="seconds">0</span>
         </div>
         <div id="text">
-            <span>**** Este site é apenas um teste! A estlização não é nada profissional, foi criado para testar conhecimentos em javascript ****</span>
+            <span>**** Este projeto é apenas um teste! A estlização não é nada profissional, foi criado para testar conhecimentos básicos em javascript ****</span>
         </div>
     </footer>
 </body>
