--- a/Prática/Praticando/pages/imc.html
+++ b/Prática/Praticando/pages/imc.html
@@ -1,11 +1,11 @@
-<div class="containerImc">
+<div class="container">
     <h1 class="imcTitle">Calculo de IMC</h1>
     <form action="" id="formImc">
-        <div class="input-wrapper">
+        <div class="input-wrapper imc">
             <label class="sr-only" for="weight">Peso</label>
             <input id="weight" type="text" placeholder="Peso">
         </div>
-        <div class="input-wrapper">
+        <div class="input-wrapper imc">
             <label class="sr-only" for="height">Altura</label>
             <input id="height" type="text" placeholder="Altura (cm)">
         </div>
