--- a/Prática/Praticando/pages/calcMedia.html
+++ b/Prática/Praticando/pages/calcMedia.html
@@ -25,11 +25,11 @@
         <button class="buttonMedia">Calcular</button>
     </form>
 
-    <div class="modalMedia open">
+    <div class="modalMedia">
         <div class="card">
-            <h2>asdasdas</h2>
-            <button>
-                <img src="/js/media/assets/close.svg" alt="">
+            <h2 class="textModal">asdasdas</h2>
+            <button class="close">
+                <img  id="closeModal" src="/js/media/assets/close.svg" alt="">
             </button>
         </div>
     </div>
