--- a/07 - Javascript antes do framework/02 - Avançando nas promisses/01 - GitHub Favorites/index.html
+++ b/07 - Javascript antes do framework/02 - Avançando nas promisses/01 - GitHub Favorites/index.html
@@ -11,6 +11,8 @@
     <title>Github Favorites</title>
 
     <link rel="stylesheet" href="style.css">
+
+    <script type="module" src="js/main.js" defer></script>
 </head>
 <body>
     <div id="app">
@@ -32,45 +34,7 @@
                 </tr>
                 
             </thead>
-            <tbody>
-                <tr>
-                    <td class="user">
-                        <img src="https://github.com/ArthurJRCelso.png" alt="">
-                        <a href="https://github.com/ArthurJRCelso" target="_blank">
-                            <p>Arthur Rodrigues</p>
-                            <span>ArthurJRCelso</span>
-                        </a>
-                    </td>
-                    <td class="repositories">
-                        76
-                    </td>
-                    <td class="followers">
-                        9589
-                    </td>
-                    <td>
-                        <button class="remove">&times;</button>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td class="user">
-                        <img src="https://github.com/maykbrito.png" alt="">
-                        <a href="https://github.com/maykbrito" target="_blank">
-                            <p>Mayk Brito</p>
-                            <span>maykbrito</span>
-                        </a>
-                    </td>
-                    <td class="repositories">
-                        48
-                    </td>
-                    <td class="followers">
-                        22503
-                    </td>
-                    <td>
-                        <button class="remove">&times;</button>
-                    </td>
-                </tr>
-            </tbody>
+            <tbody></tbody>
         </table>
     </div>
 </body>
