--- a/07 - Javascript antes do framework/02 - Avançando nas promisses/01 - GitHub Favorites/index.html
+++ b/07 - Javascript antes do framework/02 - Avançando nas promisses/01 - GitHub Favorites/index.html
@@ -34,7 +34,24 @@
                 </tr>
                 
             </thead>
-            <tbody></tbody>
+            <tbody>
+                <tr><td class="user">
+                    <img src="https://github.com/ArthurJRCelso.png" alt="">
+                    <a href="https://github.com/ArthurJRCelso" target="_blank">
+                        <p>Arthur Rodrigues</p>
+                        <span>ArthurJRCelso</span>
+                    </a>
+                </td>
+                <td class="repositories">
+                    76
+                </td>
+                <td class="followers">
+                    9589
+                </td>
+                <td>
+                    <button class="remove">&times;</button>
+                </td></tr>
+            </tbody>
         </table>
     </div>
 </body>
