--- a/07 - Javascript antes do framework/02 - Avançando nas promisses/02 - GitFav/index.html
+++ b/07 - Javascript antes do framework/02 - Avançando nas promisses/02 - GitFav/index.html
@@ -17,6 +17,38 @@
                 <button>Favoritar</button>
             </form>
         </header>
+        <table>
+            <thead>
+                <tr>
+                    <th>Usuário</th>
+                    <th>Repositório</th>
+                    <th>Followers</th>
+                    <th>Ação</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="user">
+                        <img src="https://github.com/ArthurJRCelso.png" alt="">
+                        <a href="">
+                            <p>Arthur Rodrigues</p>
+                            <span>/ArthurJRCelso</span>
+                        </a>
+                    </td>
+                    <td class="repositories">
+                        123
+                    </td>
+                    <td class="followers">
+                        1234
+                    </td>
+                    <td>
+                        <a class="remove" href="">
+                            Remover
+                        </a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </body>
 </html>
