--- a/07 - Javascript antes do framework/02 - Avançando nas promisses/02 - GitFav/index.html
+++ b/07 - Javascript antes do framework/02 - Avançando nas promisses/02 - GitFav/index.html
@@ -6,6 +6,12 @@
     <title>GitFav</title>
 
     <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
+    <script type="module" src="js/script.js" defer></script>
 </head>
 <body>
     <div id="app">
@@ -27,26 +33,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td class="user">
-                        <img src="https://github.com/ArthurJRCelso.png" alt="">
-                        <a href="">
-                            <p>Arthur Rodrigues</p>
-                            <span>/ArthurJRCelso</span>
-                        </a>
-                    </td>
-                    <td class="repositories">
-                        123
-                    </td>
-                    <td class="followers">
-                        1234
-                    </td>
-                    <td>
-                        <a class="remove" href="">
-                            Remover
-                        </a>
-                    </td>
-                </tr>
+                
             </tbody>
         </table>
     </div>
