--- a/Prática/Estudo/pages/imc.html
+++ b/Prática/Estudo/pages/imc.html
@@ -12,10 +12,10 @@
 
         <div class="calcReset">
             <button class="calcImc">Calcular</button>
-            <button id="reset" class="calcImc">Reset</button>
+            <button id="reset" class="calcImc hide">Reset</button>
         </div>
     </form>
     <div class="modal hide">
-        
+        <p class="textModal"></p>
     </div>
 </div>
