--- a/Prática/Estudo/pages/calcMedia.html
+++ b/Prática/Estudo/pages/calcMedia.html
@@ -29,7 +29,7 @@
         <div class="card">
             <h2 class="textModal">asdasdas</h2>
             <button class="close">
-                <img  id="closeModal" src="/js/media/assets/close.svg" alt="">
+                <img  id="closeModal" src="/js/assets/close.svg" alt="">
             </button>
         </div>
     </div>
