--- a/Prática/Estudo/index.html
+++ b/Prática/Estudo/index.html
@@ -18,6 +18,7 @@
             <a href="/imc">Calcular IMC</a>
             <a href="/media">Calcular média </a>
             <a href="/contact">Contato</a>
+            <a href="/github">Github Favorites</a>
         </nav>
     </header>
 
